<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_logo"
    android:fillViewport="true"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    tools:context="com.ahmed.naqalati_driver.activities.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/person"
            app:civ_border_color="@color/red_logo"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/ic_edit"
            android:gravity="center"
            android:id="@+id/tv_choose_image"
            android:paddingBottom="30dp"
            android:text="@string/choose_image"
            android:textColor="@color/red_logo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_edit_text"
            android:digits="0123456789"
            android:drawablePadding="5dp"
            android:id="@+id/et_phone"
            android:drawableStart="@drawable/ic_phone"
            android:hint="@string/number_phone"
            android:inputType="phone"
            android:lines="1"
            android:maxLines="1"
            android:minHeight="30dp"
            android:padding="5dp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_edit_text"
            android:drawablePadding="5dp"
            android:id="@+id/et_password"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:minHeight="30dp"
            android:padding="5dp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_edit_text"
            android:drawablePadding="5dp"
            android:id="@+id/et_confirm_password"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:minHeight="30dp"
            android:padding="5dp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_edit_text"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:lines="1"
            android:id="@+id/et_user_name"
            android:maxLines="1"
            android:minHeight="30dp"
            android:padding="5dp" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border_button"
            android:gravity="center"
            android:id="@+id/btn_register"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
