<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textDirection="rtl"
    xmlns:tools="http://schemas.android.com/tools"
    android:layoutDirection="rtl">
    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/person"
        app:civ_border_color="@color/red_logo"
        app:civ_border_width="2dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/profile_image"
        tools:text="ahmed bassuiopn"
        android:textSize="18sp"
        android:id="@+id/tv_name"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/profile_image"
        android:layout_below="@+id/tv_name"
        tools:text="0123456789"
        android:textSize="15sp"
        android:id="@+id/tv_phone"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tv_phone"
        android:layout_alignParentLeft="true"
        android:gravity="left"
        android:layout_below="@+id/tv_name"
        android:text="@string/show_more"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:id="@+id/tv_show_details"
        android:layout_marginStart="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="15dp"
        android:layout_toEndOf="@+id/profile_image"
        android:layout_below="@+id/tv_phone">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:background="@drawable/border_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:background="@drawable/border_button_white"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>